php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50823 ReflectionFunction::isDeprecated producing "cannot be called statically" error
Submitted: 2010-01-22 13:08 UTC Modified: 2010-01-22 14:21 UTC
From: andreww at uk dot ibm dot com Assigned:
Status: Closed Package: Reflection related
PHP Version: 5.2.12 OS: *
Private report: No CVE-ID: None
 [2010-01-22 13:08 UTC] andreww at uk dot ibm dot com
Description:
------------
Creating a new ReflectionFunction instance and then calling it's isDprecated function results in 

Fatal error: isDeprecated() cannot be called statically

This is only an issue on PHP 5.2, testing on 5.3 and 6 produce the expected result.

Reproduce code:
---------------
<?php
$rc = new ReflectionFunction('call_user_method');
var_dump($rc->isDeprecated());
?>


Expected result:
----------------
bool(true)

Actual result:
--------------
Fatal error: isDeprecated() cannot be called statically in C:\php5.2.12\test.php on line 3

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-01-22 14:21 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=293850
Log: - Fixed bug #50823 (ReflectionFunction::isDeprecated producing "cannot be called statically" error)
# Partial MF53 of r273045 by Felipe :)
 [2010-01-22 14:21 UTC] jani@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC