- Fixed bug #50823 (ReflectionFunction::isDeprecated producing "cannot be called statically" error) # Partial MF53 of r273045 by Felipe :)